--- a/sites/templates/sites/sites_main.html
+++ b/sites/templates/sites/sites_main.html
@@ -41,10 +41,13 @@
                     <td>-</td>
                     {% else %}
                     <td>
+                        {% for key, value in project.PRE.items %}
                         <a href="#" title="Presales 파일 리스트" data-toggle="popover" data-trigger="focus"
                             data-placement="top" data-val="{{project.id}}" data-info="PRE"
-                            data-document-id="{{project.document_id}}">
-                            File list(+{{project.PRE.count}})</a><br>
+                            data-document-id="{{value.document_id}}">
+                            {{key}}(+{{value.count}})
+                        </a><br>
+                        {% endfor %}
                     </td>
                     {% endif %}
 
@@ -53,7 +56,7 @@
                     {% else %}
                     <td>
                         <a href="#" title="수행계획서 파일 리스트" data-toggle="popover" data-trigger="focus" data-placement="top"
-                            data-val="{{project.id}}" data-info="PRO" data-document-id="{{project.document_id}}">
+                            data-val="{{project.id}}" data-info="PRO" data-document-id="{{project.PRO.document_id}}">
                             File list(+{{project.PRO.count}})</a><br>
                     </td>
                     {% endif %}
@@ -63,7 +66,7 @@
                     {% else %}
                     <td>
                         <a href="#" title="검수 파일 리스트" data-toggle="popover" data-trigger="focus" data-placement="top"
-                            data-val="{{project.id}}" data-info="EXA" data-document-id="{{project.document_id}}">
+                            data-val="{{project.id}}" data-info="EXA" data-document-id="{{project.EXA.document_id}}">
                             File list(+{{project.EXA.count}})</a><br>
                     </td>
                     {% endif %}
@@ -73,7 +76,7 @@
                     {% else %}
                     <td>
                         <a href="#" title="유지보수 파일 리스트" data-toggle="popover" data-trigger="focus" data-placement="top"
-                            data-val="{{project.id}}" data-info="MAN" data-document-id="{{project.document_id}}">
+                            data-val="{{project.id}}" data-info="MAN" data-document-id="{{project.MAN.document_id}}">
                             File list(+{{project.MAN.count}})</a><br>
                     </td>
                     {% endif %}
@@ -83,7 +86,7 @@
                     {% else %}
                     <td>
                         <a href="#" title="기타 파일 리스트" data-toggle="popover" data-trigger="focus" data-placement="top"
-                            data-val="{{project.id}}" data-info="ETC" data-document-id="{{project.document_id}}">
+                            data-val="{{project.id}}" data-info="ETC" data-document-id="{{project.ETC.document_id}}">
                             File list(+{{project.ETC.count}}) </a><br>
                     </td>
                     {% endif %}
