--- a/sites/templates/sites/sites_upload.html
+++ b/sites/templates/sites/sites_upload.html
@@ -21,6 +21,10 @@
                             <label>문서 형태 선택</label>
                             {{ document_form.kind }}
                         </div>
+                        <div class="form-group" id="middle__class-form">
+                            <label>중분류 선택</label>
+                            {{document_form.middle_class}}
+                        </div>
                         <div class="form-group">
                             <label>파일 업로드 (첨부파일: 7개, 각 파일은 10M 이하로 가능 / pdf, excel, ppt, word, hwp, image, zip, txt
                                 가능)</label>
