[ADD] selectbox of middle class

--- a/sites/templates/sites/sites_upload.html
+++ b/sites/templates/sites/sites_upload.html
@@ -21,9 +21,25 @@
                             <label>문서 형태 선택</label>
                             {{ document_form.kind }}
                         </div>
-                        <div class="form-group" id="middle__class-form">
+                        <div class="form-group pre__middle-class" id="middle__class-form">
                             <label>중분류 선택</label>
-                            {{document_form.middle_class}}
+                            {{document_form.pre_middle_class}}
+                        </div>
+                        <div class="form-group pro__middle-class" id="middle__class-form">
+                            <label>중분류 선택</label>
+                            {{document_form.pro_middle_class}}
+                        </div>
+                        <div class="form-group exa__middle-class" id="middle__class-form">
+                            <label>중분류 선택</label>
+                            {{document_form.exa_middle_class}}
+                        </div>
+                        <div class="form-group man__middle-class" id="middle__class-form">
+                            <label>중분류 선택</label>
+                            {{document_form.man_middle_class}}
+                        </div>
+                        <div class="form-group etc__middle-class" id="middle__class-form">
+                            <label>중분류 선택</label>
+                            {{document_form.etc_middle_class}}
                         </div>
                         <div class="form-group">
                             <label>파일 업로드 (첨부파일: 7개, 각 파일은 10M 이하로 가능 / pdf, excel, ppt, word, hwp, image, zip, txt
