--- a/templates/base.html
+++ b/templates/base.html
@@ -53,6 +53,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="{% url 'sites_main' %}">문서 현황</a>
+            <!-- <a class="dropdown-item" href="{% url 'sites_main_test' %}">문서 현황(테스트)</a> -->
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="{% url 'sites_add' %}">고객사 등록</a>
             <a class="dropdown-item" href="{% url 'document_upload' %}">문서 등록</a>
@@ -76,6 +77,15 @@
             <a class="dropdown-item" href="{% url 'weekly_main' %}">주간업무보고 현황</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="{% url 'weekly_add' %}">주간업무보고 신규 등록</a>
+          </div>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            개인
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="{% url 'member_password' %}">비밀번호 변경</a>
           </div>
         </li>
       </ul>
