[MODIFY] Class name and check the password input values before submit

--- a/member/templates/member/member_password.html
+++ b/member/templates/member/member_password.html
@@ -1,27 +1,32 @@
 {% extends 'base.html' %} {% block content %} {% load static %}
 
 <div class="container">
-    <div class="card sites">
-        <div class="card-header sites__header">
-            <i class="fa fa-external-link"></i>
-            <h5 class="card-title sites__title">&nbsp;비밀번호 변경</h5>
+    <div class="card password">
+        <div class="card-header password__header">
+            <i class="fa fa-lock"></i>
+            <h5 class="card-title password__change-title">&nbsp;비밀번호 변경</h5>
         </div>
         <div class="card-body">
-            <form class="sites__add" method="POST" name="ajaxform" action="{% url 'member_password_apply' %}">
+            <form class="password__form" method="POST" name="ajaxform" action="{% url 'member_password_apply' %}"
+                id="ajaxForm" onsubmit="return checkValues()">
                 {% csrf_token %}
-                <div class="sites__contents form-row">
+                <div class="password__contents form-row">
                     <div class="form-group col-md-12">
+                        <div class="error__message">{{error}}</div>
                         <div class="form-group">
                             <label>현재 비밀번호</label>
-                            <input type="password" class="form-control">
+                            <input type="password" class="form-control" name="origin_password" id="origin_password">
                         </div>
                         <div class="form-group">
-                            <label>변경할 비밀번호</label>
-                            <input type="password" class="form-control">
+                            <label>비밀번호 변경</label>
+                            <input type="password" class="form-control" name="password1" id="password1">
+                            <small id="passwordHelpInline" class="text-muted">
+                                변경할 비밀번호는 최소 8자리 이상 작성하시기 바랍니다.
+                            </small>
                         </div>
-                        <div class="form-group">
-                            <label>변경할 비밀번호 확인</label>
-                            <input type="password" class="form-control">
+                        <div class="form-group required">
+                            <label>비밀번호 변경 확인</label>
+                            <input type="password" class="form-control" name="password2" id="password2">
                         </div>
                     </div>
                 </div>
@@ -41,10 +46,10 @@
 
 {% endblock %} {% block title %} 개인 프로필 {% endblock %}
 {% block css %}
-<link rel="stylesheet" href="{% static 'css/selectpicker/bootstrap-select.css' %}">
-<link rel="stylesheet" href="{% static 'css/datepicker/datepicker3.css' %}">
+<link rel="stylesheet" href="{% static 'css/pages/member.css' %}">
 {% endblock %}
 
 {% block js %}
 <script src="{% static 'js/sites/jquery.form.js' %}"></script>
+<script src="{% static 'js/member/pwChange.js' %}"></script>
 {% endblock %}
