--- a/sites/templates/sites/sites_upload.html
+++ b/sites/templates/sites/sites_upload.html
@@ -3,7 +3,7 @@
 <div class="container">
     <div class="card document">
         <div class="card-header document__header">
-            <i class="fa fa-external-link"></i>
+            <i class="fa fa-upload"></i>
             <h5 class="card-title document__title">&nbsp;문서 등록</h5>
         </div>
         <div class="card-body">
@@ -135,7 +135,6 @@
         </dialog>
     </div>
 </script>
-
 
 <script src="{% static 'js/selectpicker/bootstrap-select.js' %}"></script>
 <script src="{% static 'js/fineuploader/jquery.fine-uploader.js' %}"></script>
