--- a/templates/base.html
+++ b/templates/base.html
@@ -66,6 +66,9 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="{% url 'equipment_main' %}">고객사 운용제품현황</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="{% url 'equipment_form' %}">제품등록</a>
+            <a class="dropdown-item" href="{% url 'equipment_upload' %}">제품등록(대량)</a>
           </div>
         </li>
         <li class="nav-item dropdown">
