--- a/equipment/templates/equipment/equipment_form.html
+++ b/equipment/templates/equipment/equipment_form.html
@@ -67,7 +67,7 @@
                     </div>
                 </div>
                 <div class="text-right submit-box">
-                    <button type="button" class="btn btn-outline-danger" onclick="site_add_cancel()">
+                    <button type="button" class="btn btn-outline-danger" onclick="equipmentAddCancel()">
                         취소
                     </button>
                     <button type="submit" class="btn btn-outline-secondary" id="submit-btn">
