--- a/login/templates/login/login.html
+++ b/login/templates/login/login.html
@@ -40,10 +40,7 @@
             </div>
             <div class="login__pw">
               <i class="fa fa-lock"></i>
-              <input type="password" name="member_pw" placeholder="패스워드입력" value="Glow1320!" required />
-            </div>
-            <div class="login__lost-pw">
-              <span>Forgot password?</span>
+              <input type="password" name="member_pw" placeholder="패스워드입력" required />
             </div>
             <button type="submit" class="btn btn-primary" id="login_btn">login</button>
           </div>
