[MODIFY] If comment is Null print hyphen

--- a/equipment/templates/equipment/equipment_main.html
+++ b/equipment/templates/equipment/equipment_main.html
@@ -38,7 +38,13 @@
                                 <td>{{ equipment.location }}</td>
                                 <td>{{ equipment.install_date }}</td>
                                 <td>{{ equipment.manager }}</td>
-                                <td>{{ equipment.comments }}</td>
+                                <td>
+                                    {% if equipment.comments == "" %}
+                                    -
+                                    {% else %}
+                                    {{ equipment.comments }}
+                                    {% endif %}
+                                </td>
                             </tr>
                             {% endfor %}
                         </table>
